--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "utf8-helper",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "A library helps you get UTF8 string.",
   "main": "index.js",
   "scripts": {
@@ -14,5 +14,10 @@
     "encode"
   ],
   "author": "FujiHai",
-  "license": "ISC"
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/FujiHai/utf8-helper"
+  },
+  "homepage": "https://github.com/FujiHai/utf8-helper#readme"
 }
